--- a/styles/style.css
+++ b/styles/style.css
@@ -205,6 +205,10 @@ input[type='checkbox']:checked + span::after {
 
 .content__details {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  gap: 20px;
 }
 
 .title {
@@ -214,7 +218,6 @@ input[type='checkbox']:checked + span::after {
   line-height: 0.94;
   text-transform: uppercase;
   color: #fff;
-  margin-bottom: 26px;
 }
 
 .title > .content__accent {
