--- a/styles/style.css
+++ b/styles/style.css
@@ -74,6 +74,7 @@ button:active {
 
 button:focus-visible {
   outline: 3px double #fff;
+  border: transparent;
 }
 
 .visually-hidden {
@@ -149,7 +150,7 @@ fieldset {
 
 .search-form__label:has(:focus-visible) {
   outline: 1px solid #fff;
-  padding: 2px;
+  outline-offset: 2px;
 }
 
 .search-form__textfield:active {
@@ -163,7 +164,7 @@ fieldset {
 }
 
 .search-form__label {
-  height: 31px;
+  min-height: 31px;
   width: fit-content;
   cursor: pointer;
   display: flex;
@@ -195,7 +196,7 @@ input[type='checkbox']:checked + span::after {
 
 .search-form__submit-button {
   align-self: flex-end;
-  width: 194px;
+  min-width: 194px;
 }
 
 .content__list {
@@ -237,7 +238,7 @@ input[type='checkbox']:checked + span::after {
   color: #fff;
   display: block;
   padding: 4px 2px;
-  height: 107px;
+  min-height: 107px;
   width: 394px;
 }
 
