--- a/styles/style.css
+++ b/styles/style.css
@@ -49,9 +49,6 @@ ol {
   background-color: transparent;
   border: 1px solid #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.2;;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.2;
@@ -68,13 +65,13 @@ ol {
   text-decoration: underline;
 }
 
-button:active {
+.button:active {
   background-color: #545050;
 }
 
-button:focus-visible {
-  outline: 3px double #fff;
-  border: transparent;
+.button:focus-visible {
+  outline: 1px double #fff;
+  outline-offset: 2px;
 }
 
 .visually-hidden {
@@ -237,7 +234,7 @@ input[type='checkbox']:checked + span::after {
   text-decoration: none;
   color: #fff;
   display: block;
-  padding: 4px 2px;
+  padding: 4px 2px 1px 2px;
   min-height: 107px;
   width: 394px;
 }
@@ -246,7 +243,7 @@ input[type='checkbox']:checked + span::after {
   background-color: #545050;
 }
 
-.content__card-link:not(.content__card-link_current):hover {
+.content__card-link:not(.content__card-link_current, :active):hover {
   text-decoration: underline;
 }
 
@@ -256,6 +253,10 @@ input[type='checkbox']:checked + span::after {
 
 .content__card-link:focus-visible {
   outline: 1px solid #fff;
+}
+
+.content__card-link:active {
+  background-color: #545050;
 }
 
 .content__video-card-title {
